<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- limit 20 harf-->
    <string name="action_settings">Settings</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Yagmur">%s</xliff:g></string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$5">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Yagmur">%s</xliff:g></string>
    <string name="thank_you">Thank You!</string>



</resources>
